[tool.poetry]
name = "sst-scripts"
version = "0.1.0"
description = "Data processing scripts related to the Seedlot Selection Tool"
authors = ["Conservation Biology Institute"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.8"
trefoil = { git = "https://github.com/consbio/trefoil.git", branch = "main" }
click = "^7.1.2"
numpy = "^1.20.2"
rasterio = "^1.2.3"
netCDF4 = "^1.5.6"
pyproj = "^3.0.1"
Fiona = "^1.8.19"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
